--- a/pyhq-config.yaml
+++ b/pyhq-config.yaml
@@ -1,7 +1,7 @@
 timeout: 30
 frequency: 10800
 accounts:
-  - username: rene.purcell@gmail.com
+  - username: xxxxxxx@xxxx.com
     password: xxxx
     contracts:
       - id: 222255777
