--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
 "slug": "pyhydroquebec",
 "description": "Get your consumption data from your HydroQuebec account inside this hass addon",
 "url":"https://github.com/titilambert/pyhydroquebec",
-"arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+"arch": ["aarch64", "amd64", "i386"],
 "startup": "application",
 "boot": "auto",
 "map": [
