--- a/pyhydroquebec/config.json
+++ b/pyhydroquebec/config.json
@@ -2,8 +2,8 @@
 "name": "pyhydroquebec Add-on",
 "version": "0.024",
 "slug": "pyhydroquebec",
-"description": "Get your consumption data from your HydroQuebec account inside this hass addon",
-"url":"https://github.com/titilambert/pyhydroquebec",
+"description": "Get your consumption data from your HydroQuebec account to your MQTT using this hass addon",
+"url":"https://github.com/arsenicks/pyhydroquebec-hass-addons/tree/main/pyhydroquebec",
 "arch": ["aarch64", "amd64", "i386"],
 "startup": "application",
 "boot": "auto",
