--- a/pyhydroquebec/Dockerfile
+++ b/pyhydroquebec/Dockerfile
@@ -1,4 +1,12 @@
-FROM hassioaddons/base:latest
+# https://developers.home-assistant.io/docs/add-ons/configuration#add-on-dockerfile
+ARG BUILD_FROM
+FROM $BUILD_FROM
+
+# Execute during the build of the image
+ARG TEMPIO_VERSION BUILD_ARCH
+RUN \
+    curl -sSLf -o /usr/bin/tempio \
+    "https://github.com/home-assistant/tempio/releases/download/${TEMPIO_VERSION}/tempio_${BUILD_ARCH}"
 
 RUN apk add --no-cache gcc musl-dev curl python3 py3-pip python3-dev
 
