--- a/pyhydroquebec/config.json
+++ b/pyhydroquebec/config.json
@@ -4,7 +4,7 @@
 "slug": "pyhydroquebec",
 "description": "Get your consumption data from your HydroQuebec account to your MQTT using this hass addon",
 "url":"https://github.com/arsenicks/pyhydroquebec-hass-addons/tree/main/pyhydroquebec",
-"arch": ["aarch64", "amd64", "i386"],
+"arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
 "startup": "application",
 "boot": "auto",
 "map": [
